# stash-vcs

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  MyDoxyfile  README.md
.github/workflows/: build.yml
docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_arg-members.html  class_arg.html  class_arg.js  class_branch_already_exists_exception-members.html  class_branch_already_exists_exception.html  class_branch_already_exists_exception.js  class_branch_not_found_exception-members.html  class_branch_not_found_exception.html  class_branch_not_found_exception.js  class_command-members.html  class_command.html  class_command.js  class_command_args-members.html  class_command_args.html  class_command_args.js  class_command_invoker-members.html  class_command_invoker.html  class_command_invoker.js  class_commit_not_found_exception-members.html  class_commit_not_found_exception.html  class_commit_not_found_exception.js  class_commit_state-members.html  class_commit_state.html  class_commit_state.js  class_commit_utils-members.html  class_commit_utils.html  class_commit_utils.js  class_file-members.html  class_file.html  class_file.js  class_file_content-members.html  class_file_content.html  class_file_content.js  (+114 more)
docs/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.tex  annotated.tex  class_arg.tex  class_branch_already_exists_exception.eps  class_branch_already_exists_exception.tex  class_branch_not_found_exception.eps  class_branch_not_found_exception.tex  class_command.tex  class_command_args.tex  class_command_invoker.tex  class_commit_not_found_exception.eps  class_commit_not_found_exception.tex  class_commit_state.tex  class_commit_utils.tex  class_file.tex  class_file_content.tex  class_metadata_handler.tex  class_no_commits_left_exception.eps  class_no_commits_left_exception.tex  class_persistence_stack.tex  class_repo.tex  class_stash.tex  command_8cpp.tex  command_8hpp.tex  command_8hpp_source.tex  command__args_8cpp.tex  command__args_8hpp.tex  command__args_8hpp_source.tex  commit__state_8cpp.tex  commit__state_8hpp.tex  commit__state_8hpp_source.tex  dir_0b5240cbcc7be621e1bb9d5abea53742.tex  dir_23a0d50dcd094ed521bc635c2d3c59e7.tex  dir_2b1a946209a10c32ed7ce5dec2f54bea.tex  (+36 more)
src/: main.cpp
(+151 files in other folders)
